[package]
name = "redis_raw"
version = "1.1.0"
authors = ["amin roosta <amin.roosta@outlook.com>"]
edition = "2018"
description = "Minimal Redis client library implementation."
readme = "README.md"
license = "BSD-3-Clause"
documentation = "https://docs.rs/redis_raw"
homepage = "https://github.com/aminroosta/redis-raw-rs"
repository = "https://github.com/aminroosta/redis-raw-rs"

[dependencies]
tokio = { version = "1.3.0", features = ["macros", "io-util", "rt-multi-thread", "net"] }
thiserror = "1.0"
